--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,15 +1,12 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "semistandard",
-        "prettier"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "script"
-    },
-    "rules": {}
+  "env": {
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["semistandard", "prettier"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "script"
+  },
+  "rules": {}
 }
