--- a/src/package.json
+++ b/src/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.25.0",
     "eta": "^1.12.3",
+    "flexsearch": "^0.7.21",
     "jsdom": "^16.6.0"
   },
   "description": "Scrapes Adrian Cantrill's (cantrill.io) AWS courses and uploads the output to an S3 bucket hosting a static website",
@@ -28,7 +29,7 @@
           "*.html"
         ],
         "options": {
-          "printWidth": 180
+          "printWidth": 240
         }
       }
     ],
@@ -44,5 +45,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "commonjs",
-  "version": "1.0.0"
+  "version": "2.0.0"
 }
