--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -2,6 +2,6 @@
   "exclude": ["node_modules"],
   "typeAcquisition": {
     "enable": true,
-    "include": ["anychart", "highcharts", "jquery", "lodash"]
+    "include": ["highcharts", "jquery", "lodash"]
   }
 }
