--- a/cloudformation/template.yaml
+++ b/cloudformation/template.yaml
@@ -25,31 +25,12 @@ Resources:
         S3Key: cantrill.io-courses-scraper.zip
       Environment:
         Variables:
-          COURSES:
-            "{\n  \"associate\": [\n      {\n          \"code\": \"dva-c01\"\
-            ,\n          \"color\": \"#2c77ea\",\n          \"title\": \"AWS Certified\
-            \ Developer - Associate\",\n          \"url\": \"https://learn.cantrill.io/p/aws-certified-developer-associate\"\
-            \n      },\n      {\n          \"code\": \"saa-c02\",\n          \"color\"\
-            : \"#2c77ea\",\n          \"title\": \"AWS Certified Solutions Architect\
-            \ - Associate\",\n          \"url\": \"https://learn.cantrill.io/p/aws-certified-solutions-architect-associate-saa-c02\"\
-            \n      },\n      {\n          \"code\": \"soa-c02\",\n          \"color\"\
-            : \"#2c77ea\",\n          \"title\": \"AWS Certified SysOps Administrator\
-            \ - Associate\",\n          \"url\": \"https://learn.cantrill.io/p/aws-certified-sysops-administrator-associate\"\
-            \n      }\n  ],\n  \"professional\": [\n      {\n          \"code\": \"\
-            sap-c01\",\n          \"color\": \"#3dcac0\",\n          \"title\": \"\
-            AWS Certified Solutions Architect - Professional\",\n          \"url\"\
-            : \"https://learn.cantrill.io/p/aws-certified-solutions-architect-professional\"\
-            \n      },\n      {\n          \"code\": \"dop-c01\",\n          \"color\"\
-            : \"#3DCAC0\",\n          \"title\": \"AWS Certified DevOps Engineer -\
-            \ Professional\",\n          \"url\": \"https://learn.cantrill.io/p/aws-certified-devops-engineer-professional\"\
-            \n      }\n  ],\n  \"specialty\": [\n      {\n          \"code\": \"ans-c01\"\
-            ,\n          \"color\": \"#4d27aa\",\n          \"title\": \"AWS Certified\
-            \ Advanced Networking - Specialty\",\n          \"url\": \"https://learn.cantrill.io/p/aws-certified-advanced-networking-specialty\"\
-            \n      }\n  ]\n}"
+          COURSES: "config_files/courses.json"
           DURATION_VARIANCE_PERCENTAGE: 5.0
+          FORCED_MATCHES: "config_files/forced_matches.json"
           FUZZY_SET_MINIMUM_SCORE_MATCH: 0.7
-          FUZZY_SET_INVALID_MATCHES: ""
-          LECTURES_SKIP_LIST: ""
+          FUZZY_SET_INVALID_MATCHES: "config_files/fuzzyset_invalid_matches.json"
+          SKIPPED_MATCHES: "config_files/skipped_matches.json"
           S3_BUCKET_NAME:
             Fn::ImportValue:
               Fn::Sub: CantrillCoursesScraperS3BucketName${Environment}
