--- a/cloudformation/template_iam.yaml
+++ b/cloudformation/template_iam.yaml
@@ -56,6 +56,7 @@ Resources:
         Statement:
           - Effect: Allow
             Action:
+              - s3:GetObject
               - s3:PutObject
             Resource: !Join
               - ""
